--- a/src/008/demo-events/css/main.css
+++ b/src/008/demo-events/css/main.css
@@ -15,3 +15,27 @@ body {
 .hidden {
 	display: none;
 }
+
+.image-blur {
+	filter: blur(5px);
+}
+
+code {
+	font-family: monospace;
+	font-size: 1.2em;
+	font-weight: bold;
+	background-color: #eee;
+	padding: 0.2em;
+	color: blue;
+}
+
+kbd {
+	font-family: monospace;
+	font-size: 1.2em;
+	font-weight: bold;
+	background-color: #eee;
+	padding: 0.2em;
+	border-radius: 0.4em;
+	border-style: solid;
+	border-width: thin;
+}
